--- a/estilos/actores.css
+++ b/estilos/actores.css
@@ -2,88 +2,157 @@
     margin: 0;
     padding: 0;
     box-sizing: border-box;
-/*    color-scheme: dark;*/
     font-family: Tahoma;    
+    list-style: none
 }
 
 body{
+    display: flex;
+    flex-direction: column;
+    height: 100vh;
     background-image: url(../imagenes/fondo.png);
     background-size: 100%;
     background-repeat:repeat-y;
 }
 
 .cabecera{
+    display: flex;
+    align-items: center;
     width: 100%;
-    height: auto;
-    position: fixed;
     top: 0;
-    z-index: 10;
+    background-color: black;
+    justify-content:space-between;
+    padding: 0 1%;
+}
+
+.cabecera p{
+    font-size: 2.2rem;
+    font-weight: bolder;
+    color: red;
+    text-align: center;
+    padding: 1%;
+}
+
+.MenuOpciones{
+    display: flex;
+    justify-content: space-between;
+    gap: 20px;
+}
+
+.MenuOpciones a{
+    text-decoration: none;
+    font-size: 0.9rem;
+    font-weight: bold;
+    align-items: center;
+    color: red;
+    padding: 6px 3px;
+}
+
+.MenuOpciones a:hover{
+    transition: all 0.5s;
+    height: 100px;
+    background-color: red;
+    color: black;
+    border-radius: 6px;
+}
+
+main{
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+}
+
+.Ingreso{
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+}
+
+.Ingreso h1{
+    padding: 15px;
+}
+
+#actor{
+    font-size: 18px;
+}
+
+#BotonBuscar{
+    font-size: 16px;
+    width: 120px;
+    height: 25px;
+}
+
+#BotonBuscar:hover{
+    background-color: red;
+}
+
+.Respuesta{
+    display: flex;
+    flex-direction: row;
+    margin-top: 40px;
+    padding: 15px 0;
+    border: 2px black solid;
+    box-shadow: 5px 10px 10px 4px grey;
+    background-color: rgba(255, 0, 0, 0.1)
+}
+
+.Foto{
+    width: 15vw;
+    height: 350px;
+    margin: 10px;
+    text-align: center;
+    vertical-align:middle;
+}
+
+.Foto img{
+    margin: 0 auto;
+    display: flexbox ;
+    width: 100%;
+}
+
+.Bio{
+    width: 45vw;
+    height: 350px;
+    margin: 10px;
+    overflow: auto;
+}
+
+.Film{
+    width: 30vw;
+    height: 350px;
+    margin: 10px;
+    overflow: auto;    
+}
+
+.Film a{
+    color: black;
+    text-decoration: none;
+}
+
+.Film a:hover{
+    color: darkred;
+    font-weight: bold;
+    text-shadow: 2px;
+}
+
+footer{
+    display: flex;
+    margin-top: auto;
+    align-items:center;
+    justify-content: space-between;
+    height: 60px;
+    padding: 20px;
+    color: red;
     background-color: black;
 }
 
-.cartel{
-    margin-left: 10px;
-    margin-right: auto;
-    margin-top: 10px;
-    margin-bottom: 15px;
-    width: 1250px;
+footer img{
+    width: 30px;
     height: auto;
-    overflow: hidden;
+    border-radius: 50%;
 }
 
-img{
-    width: 100%;
-    height: 100%;
-    object-fit: cover;
+footer:hover{
+    transition: all 0.2s;
+    font-size: 20px;
 }
-
-.menu{
-    width: 200px;
-    height: auto;
-    position: fixed;
-    top: 20px;
-    margin-left: 1300px;
-    padding: 2px;
-}
-
-
-.peli, .dire, .gene, .anio, .pais, .acto, .cont, .indi{
-    text-decoration-line: none;
-    text-align: center;
-}
-
-    
-/*.contenedor {
-    display: grid;
-    grid-template-columns: auto auto auto auto;
-    margin-top: 200px;
-    align-content: center;
-}*/
-
-
-.IngresoDeDatos{
-    margin-top: 220px;
-}
-
-.Resultados{
-    margin-top: 50px;
-}
-
-.div1, .div2, .div3{
-    width: 300px;
-    height: 400px;
-    padding: 10px;
-    background-color: lightgray;
-    color: black;
-    border-width: 1px;
-    border-style: solid;
-    border-color: darkgray darkgray gray gray;
-    border-radius: 16px;
-    box-shadow: 6px 6px 15px 0 black;
-}
-
-.div1{z-index: 1; margin-left: 10px; }
-
-.div2{z-index: 2; margin-left: 20px; }
-
-.div3{z-index: 3; margin-left: 30px; }
