--- a/estilos/contacto.css
+++ b/estilos/contacto.css
@@ -2,80 +2,123 @@
     margin: 0;
     padding: 0;
     box-sizing: border-box;
-/*    color-scheme: dark;*/
     font-family: Tahoma;    
+    list-style: none
 }
 
 body{
+    display: flex;
+    flex-direction: column;
     background-image: url(../imagenes/fondo.png);
+    height: 100dvh;
     background-size: 100%;
     background-repeat:repeat-y;
+    align-content: center;
 }
 
 .cabecera{
+    display: flex;
+    align-items: center;
     width: 100%;
-    height: auto;
-    position: fixed;
     top: 0;
-    z-index: 10;
     background-color: black;
+    justify-content:space-between;
+    padding: 0 1%;
 }
 
-.cartel{
-    margin-left: 10px;
-    margin-right: auto;
-    margin-top: 10px;
-    margin-bottom: 15px;
-    width: 1250px;
-    height: auto;
-    overflow: hidden;
-}
-
-img{
-    width: 100%;
-    height: 100%;
-    object-fit: cover;
-}
-
-.menu{
-    width: 200px;
-    height: auto;
-    position: fixed;
-    top: 20px;
-    margin-left: 1300px;
-    padding: 2px;
-}
-
-
-.peli, .dire, .gene, .anio, .pais, .acto, .cont, .indi{
-    text-decoration-line: none;
+.cabecera p{
+    font-size: 2.2rem;
+    font-weight: bolder;
+    color: red;
     text-align: center;
+    padding: 1%;
+}
+
+.MenuOpciones{
+    display: flex;
+    justify-content: space-between;
+    gap: 20px;
+}
+
+.MenuOpciones a{
+    text-decoration: none;
+    font-size: 0.9rem;
+    font-weight: bold;
+    align-items: center;
+    color: red;
+    padding: 6px 3px;
+}
+
+.MenuOpciones a:hover{
+    transition: all 0.5s;
+    height: 100px;
+    background-color: red;
+    color: black;
+    border-radius: 6px;
 }
 
     
 .contenedor {
-    display: grid;
-    grid-template-columns: auto auto auto auto;
-    margin-top: 200px;
-    align-content: center;
+    display: flex;
+    width: 100%;
+    flex-direction: column;
 }
 
-
-.div1, .div2, .div3, .div4{
-    width: 300px;
-    height: 400px;
-    padding: 10px;
-    background-color: lightgray;
-    color: black;
-    border-width: 1px;
-    border-style: solid;
-    border-color: darkgray darkgray gray gray;
-    border-radius: 16px;
-    box-shadow: 6px 6px 15px 0 black;
+.contenedor p{
+    font-size: 1.6rem;
+    font-weight: bold;
+    margin-top: 20px;
+    align-self: center;
 }
 
-.div1{z-index: 1; margin-left: 10px; }
+.contenedor form{
+    
+    margin: 20px;
+    width: 40%;
+    align-self: center;
+}
 
-.div2{z-index: 2; margin-left: 20px; }
+input{
+    font-size: 1.1rem;
+    width: 60%;
+    margin: 10px 20%;
+}
 
-.div3{z-index: 3; margin-left: 30px; }
+textarea{
+    font-size: 1.1rem;
+    width: 60%;
+    margin: 10px 20%;
+}
+
+.boton{
+    padding: 10px 0;
+    margin: 0 20%;
+    font-weight: bold;
+    
+}
+
+.boton:hover{
+    background-color: red;
+}
+
+footer{
+    display: flex;
+    margin-top: auto;
+    align-items:center;
+    justify-content: space-between;
+    height: 60px;
+    padding: 20px;
+    color: red;
+    background-color: black;
+}
+
+footer img{
+    width: 30px;
+    height: auto;
+    border-radius: 50%;
+}
+
+footer:hover{
+    transition: all 0.2s;
+    font-size: 20px;
+}
