--- a/estilos/directores.css
+++ b/estilos/directores.css
@@ -3,111 +3,158 @@
     padding: 0;
     box-sizing: border-box;
     font-family: Tahoma;    
+    list-style: none
 }
 
 body{
+    display: flex;
+    flex-direction: column;
     background-image: url(../imagenes/fondo.png);
+    height: 100vh;
     background-size: 100%;
     background-repeat:repeat-y;
-    /*margin-top: 0px;*/
+    
 }
 
 .cabecera{
+    display: flex;
+    align-items: center;
     width: 100%;
-    height: 80px;
-    position: fixed;
     top: 0;
-    z-index: 10;
     background-color: black;
-    align-content: center;
+    justify-content:space-between;
+    padding: 0 1%;
 }
 
 .cabecera p{
-    font-size: 48px;
+    font-size: 2.2rem;
     font-weight: bolder;
     color: red;
     text-align: center;
+    padding: 1%;
 }
 
 .MenuOpciones{
-    width: 100%;
-    height: 40px;
-    position: fixed;
-    top: 80px;
-    z-index: 10;
-    background-color: red;
-    display: grid;
-    grid-template-columns: auto;
+    display: flex;
+    justify-content: space-between;
+    gap: 20px;
 }
 
-.MenuOpciones td{
-    text-align: center;
-}
-
-.peli, .dire, .gene, .anio, .pais, .acto, .cont, .indi{
-    color: black;
+.MenuOpciones a{
+    text-decoration: none;
+    font-size: 0.9rem;
     font-weight: bold;
-    text-decoration-line: none;
-    text-align: center;
+    align-items: center;
+    color: red;
+    padding: 6px 3px;
 }
 
-.IngresoDatos div{
-    margin-top: 120px;
-    text-align: center;
-}   
-
-.IngresoDatos form{
-    margin-top: 30px;
-    margin-left: 40%;
+.MenuOpciones a:hover{
+    transition: all 0.5s;
+    height: 100px;
+    background-color: red;
+    color: black;
+    border-radius: 6px;
 }
 
-input[type="text"] {
-    font-size: larger;
+main{
+    display: flex;
+    flex-direction: column;
+    
+    align-items: center;
 }
 
-input[type="submit"] {
-    font-size: larger;
-    width: 80px;
+.Ingreso{
+    display: flex;
+    flex-direction: column;
+    align-items: center;
 }
 
-.Resultados{
-    margin-top: 30px;
-    display: grid;
-    grid-template-columns: 20% 40% 35%;
-}   
+.Ingreso h1{
+    padding: 15px;
+}
+
+#director{
+    font-size: 18px;
+}
+
+#BotonBuscar{
+    font-size: 16px;
+    width: 120px;
+    height: 25px;
+}
+
+#BotonBuscar:hover{
+    background-color: red;
+}
+
+.Respuesta{
+    display: flex;
+    flex-direction: row;
+    margin-top: 40px;
+    padding: 15px 0;
+    border: 2px black solid;
+    box-shadow: 5px 10px 10px 4px grey;
+    background-color: rgba(255, 0, 0, 0.1)
+}
 
 .Foto{
-    
-    padding: 20px;
-    margin: 0 0 20px 30px;
-    background-color: lightgray;
-    border: solid 2px gray;
-    border-radius: 8px;
-    box-shadow: 5px 4px 20px 0 black;
-}   
-
-img{
-    width: 95%;
-    position: relative;
-    
+    width: 15vw;
+    height: 350px;
+    margin: 10px;
+    text-align: center;
+    vertical-align:middle;
 }
 
-.Biografia{
-    
-    padding: 20px;
-    margin: 0 0 20px 30px;
-    background-color: lightgray;
-    border: solid 2px gray;
-    border-radius: 8px;
-    box-shadow: 5px 4px 20px 0 black;
-}   
+.Foto img{
+    margin: 0 auto;
+    display: flexbox ;
+    width: 100%;
+}
 
-.Filmografia{
-    font-size: large;
+.Bio{
+    width: 45vw;
+    height: 350px;
+    margin: 10px;
+    overflow: auto;
+}
+
+.Film{
+    width: 30vw;
+    height: 350px;
+    margin: 10px;
+    overflow: auto;    
+}
+
+.Film a{
+    color: black;
+    text-decoration: none;
+}
+
+.Film a:hover{
+    color: darkred;
+    font-weight: bold;
+    text-shadow: 2px;
+}
+
+footer{
+    display: flex;
+    margin-top: auto;
+    align-items:center;
+    justify-content: space-between;
+    height: 60px;
     padding: 20px;
-    margin: 0 0 20px 30px;
-    background-color: lightgray;
-    border: solid 2px gray;
-    border-radius: 8px;
-    box-shadow: 5px 4px 20px 0 black;
-}   
+    color: red;
+    background-color: black;
+}
+
+footer img{
+    width: 30px;
+    height: auto;
+    border-radius: 50%;
+}
+
+footer:hover{
+    transition: all 0.2s;
+    font-size: 20px;
+}
