--- a/estilos/index.css
+++ b/estilos/index.css
@@ -2,80 +2,209 @@
     margin: 0;
     padding: 0;
     box-sizing: border-box;
-/*    color-scheme: dark;*/
     font-family: Tahoma;    
+    list-style: none
 }
 
 body{
+    display: flex;
+    flex-direction: column;
     background-image: url(../imagenes/fondo.png);
+    height: 100vh;
     background-size: 100%;
     background-repeat:repeat-y;
+    
 }
 
 .cabecera{
+    display: flex;
+    align-items: center;
     width: 100%;
-    height: auto;
-    position: fixed;
     top: 0;
-    z-index: 10;
     background-color: black;
+    justify-content:space-between;
+    padding: 0 1%;
 }
 
-.cartel{
-    margin-left: 10px;
-    margin-right: auto;
-    margin-top: 10px;
-    margin-bottom: 15px;
-    width: 1250px;
-    height: auto;
-    overflow: hidden;
+.cabecera p{
+    font-size: 2.2rem;
+    font-weight: bolder;
+    color: red;
+    text-align: center;
+    padding: 1%;
 }
 
-img{
-    width: 100%;
-    height: 100%;
-    object-fit: cover;
+.MenuOpciones{
+    display: flex;
+    justify-content: space-between;
+    gap: 20px;
 }
 
-.menu{
-    width: 200px;
-    height: auto;
-    position: fixed;
-    top: 20px;
-    margin-left: 1300px;
-    padding: 2px;
+.MenuOpciones a{
+    text-decoration: none;
+    font-size: 0.9rem;
+    font-weight: bold;
+    align-items: center;
+    color: red;
+    padding: 6px 3px;
 }
 
+.MenuOpciones a:hover{
+    transition: all 0.5s;
+    height: 100px;
+    background-color: red;
+    color: black;
+    border-radius: 6px;
+}
 
-.peli, .dire, .gene, .anio, .pais, .acto, .cont, .indi{
-    text-decoration-line: none;
+h2{
+    margin: 4px;
+    grid-row: 1/2;
+    grid-column: 1/6;
+    padding: 10px;
     text-align: center;
 }
 
-    
-.contenedor {
+.contenedor{
     display: grid;
-    grid-template-columns: auto auto auto auto;
-    margin-top: 200px;
-    align-content: center;
+    height: 95%;
+    width: 95%;
+    grid-template-columns: repeat(5, 20%);
+    grid-template-rows: repeat(2, 50%);
+    padding: 15px;
+    margin: 10px auto;
+    /*background-color: rgba(255, 0, 0, 0.1);
+    border: solid 2px gray;
+    border-radius: 8px;
+    box-shadow: 5px 4px 20px 0 black;*/
 }
 
-
-.div1, .div2, .div3, .div4{
-    width: 300px;
-    height: 400px;
+.p1{
+    grid-row: 2/3;
+    grid-column: 1/2;
+    background-color: rgba(255, 0, 0, 0.1);
+    font-size: 0.9rem;
+    margin: 10px;
+    border: 1px solid black;
+    border-radius: 10px;
+    box-shadow: 5px 4px 20px 0 black;;
     padding: 10px;
-    background-color: lightgray;
-    color: black;
-    border-width: 1px;
-    border-style: solid;
-    border-color: darkgray darkgray gray gray;
-    border-radius: 16px;
-    box-shadow: 6px 6px 15px 0 black;
+    
 }
 
-.div1{z-index: 1; margin-left: 10px; }
+.p1 img{
+    display: block;
+    width: 90%;
+    margin: 0 5%;
+}
 
-.div2{z-index: 2; margin-left: 20px; }
+.p1 p{
+    display: block;
+    width: 90%;
+    margin: 20px 5%;
 
-.div3{z-index: 3; margin-left: 30px; }
+}
+
+.p2{
+    grid-row: 2/3;
+    grid-column: 2/3;
+    background-color: rgba(255, 0, 0, 0.1);
+    font-size: 0.9rem;
+    margin: 10px;
+    border: 1px solid black;
+    border-radius: 10px;
+    box-shadow: 5px 4px 20px 0 black;;
+    padding: 10px;}
+
+.p2 img{
+    display: block;
+    width: 90%;
+    margin: 0 5%;
+}
+    
+.p3{
+    grid-row: 2/3;
+    grid-column: 3/4;
+    background-color: rgba(255, 0, 0, 0.1);
+    font-size: 0.9rem;
+    margin: 10px;
+    border: 1px solid black;
+    border-radius: 10px;
+    box-shadow: 5px 4px 20px 0 black;;
+    padding: 10px;}
+
+.p3 img{
+    display: block;
+    width: 90%;
+    margin: 0 5%;
+}
+    
+.p4{
+    grid-row: 2/3;
+    grid-column: 4/5;
+    background-color: rgba(255, 0, 0, 0.1);
+    font-size: 0.9rem;
+    margin: 10px;
+    border: 1px solid black;
+    border-radius: 10px;
+    box-shadow: 5px 4px 20px 0 black;;
+    padding: 10px;
+}
+
+.p4 img{
+    display: block;
+    width: 90%;
+    margin: 0 5%;
+}
+
+.p5{
+    grid-row: 2/3;
+    grid-column: 5/6;
+    background-color: rgba(255, 0, 0, 0.1);
+    font-size: 0.9rem;
+    margin: 10px;
+    border: 1px solid black;
+    border-radius: 10px;
+    box-shadow: 5px 4px 20px 0 black;;
+    padding: 10px;
+}
+
+.p5 img{
+    display: block;
+    width: 90%;
+    margin: 0 5%;
+}
+
+/*.p4:hover{
+    color: yellow;
+    line-height: 2rem;
+    background-color: black;
+    border-bottom: 5px solid yellowgreen;
+    border-right: 5px solid yellowgreen;
+    border-top: 5px solid yellow;
+    border-left: 5px solid yellow;
+    transform: rotate(0.5turn);
+    transition: all 0.5s;
+}*/
+
+footer{
+    display: flex;
+    margin-top: auto;
+    align-items:center;
+    justify-content: space-between;
+    height: 60px;
+    padding: 20px;
+    color: red;
+    background-color: black;
+}
+
+footer img{
+    width: 30px;
+    height: auto;
+    border-radius: 50%;
+}
+
+footer:hover{
+    transition: all 0.2s;
+    font-size: 20px;
+}
