--- a/estilos/paises.css
+++ b/estilos/paises.css
@@ -2,80 +2,190 @@
     margin: 0;
     padding: 0;
     box-sizing: border-box;
-/*    color-scheme: dark;*/
     font-family: Tahoma;    
+    list-style: none;
+    text-decoration-line: none;
 }
 
 body{
+    display: flex;
+    flex-direction: column;
     background-image: url(../imagenes/fondo.png);
+    height: 100dvh;
     background-size: 100%;
     background-repeat:repeat-y;
+    
 }
 
 .cabecera{
+    display: flex;
+    align-items: center;
     width: 100%;
-    height: auto;
-    position: fixed;
     top: 0;
-    z-index: 10;
     background-color: black;
+    justify-content:space-between;
+    padding: 0 1%;
 }
 
-.cartel{
-    margin-left: 10px;
-    margin-right: auto;
-    margin-top: 10px;
-    margin-bottom: 15px;
-    width: 1250px;
-    height: auto;
-    overflow: hidden;
+.cabecera p{
+    font-size: 2.2rem;
+    font-weight: bolder;
+    color: red;
+    text-align: center;
+    padding: 1%;
 }
 
-img{
-    width: 100%;
-    height: 100%;
-    object-fit: cover;
+.MenuOpciones{
+    display: flex;
+    justify-content: space-between;
+    gap: 20px;
 }
 
-.menu{
-    width: 200px;
-    height: auto;
-    position: fixed;
-    top: 20px;
-    margin-left: 1300px;
-    padding: 2px;
+.MenuOpciones a{
+    text-decoration: none;
+    font-size: 0.9rem;
+    font-weight: bold;
+    align-items: center;
+    color: red;
+    padding: 6px 3px;
 }
 
+.MenuOpciones a:hover{
+    transition: all 0.5s;
+    height: 100px;
+    background-color: red;
+    color: black;
+    border-radius: 6px;
+}
 
-.peli, .dire, .gene, .anio, .pais, .acto, .cont, .indi{
-    text-decoration-line: none;
+main{
+    align-items: center;
+
+}
+
+.titulo{
+    font-size: 1.65rem;
+    font-weight: bold;
+    padding-top: 15px;
     text-align: center;
 }
 
-    
-.contenedor {
-    display: grid;
-    grid-template-columns: auto auto auto auto;
-    margin-top: 200px;
-    align-content: center;
+.IndiceAlfabetico{
+    display: flex;
+    flex-direction: row;
+    text-align: center;
+    justify-content: space-between;
+    top: 0;
+    gap: 5px;
+    width: 60%;
+    margin: 20px 20% 20px 20%; 
+    background-color: black;
+    border: 1px solid grey;
+    box-shadow: 5px 4px 20px 0 black;
+    padding: 2px;
 }
 
+.IndiceAlfabetico a{
+    padding: 5px;
+    font-size: 18px;
+}
 
-.div1, .div2, .div3, .div4{
-    width: 300px;
-    height: 400px;
-    padding: 10px;
-    background-color: lightgray;
+.IndiceAlfabetico a:hover{
     color: black;
-    border-width: 1px;
-    border-style: solid;
-    border-color: darkgray darkgray gray gray;
-    border-radius: 16px;
-    box-shadow: 6px 6px 15px 0 black;
+    background-color: red;
+    font-weight: bold;
 }
 
-.div1{z-index: 1; margin-left: 10px; }
+.BotonIndice{
+    width: auto;
+    height: auto;
+    padding: 6px;
+    background-color: black;
+    border: solid 2px red;
+    box-shadow: 5px 4px 20px 0 black;
+    position: fixed;
+    bottom: 10vh;
+    right: 10px;    
+}
 
-.div2{z-index: 2; margin-left: 20px; }
+.BotonIndice a{
+    color: red;
+    text-decoration-line: none;
+    text-align: right;
+    font-size: small;
+    font-weight: bold;
+}
 
-.div3{z-index: 3; margin-left: 30px; }
+.NombresPaises{
+    display: flex;
+    flex-direction: column;
+    height: auto;
+    width: 40%;
+    padding: 20px;
+    margin: 10px 30% 30px 30%;
+    background-color: rgba(255, 0, 0, 0.1);
+    border: solid 2px gray;
+    border-radius: 8px;
+    box-shadow: 5px 4px 20px 0 black;
+}
+
+.NombresPaises h2{
+    margin-left: 20px 0;
+    border-bottom: 2px solid black;
+}
+
+.listaDePaises{
+    display: grid;
+    grid-template-columns: 70% 20%;
+    align-items: center;
+}
+
+.NombresPaises ul{
+    list-style: none;
+    padding: 20px;
+}
+
+.NombresPaises li{
+    margin-left: 40px;
+    padding: 8px 0 0 0 ;
+}
+
+.NombresPaises li:hover{
+    color: darkred;
+    font-weight: bold;
+    text-shadow: 2px;
+}
+
+#BotonFiltrar{
+    margin: 15px 0px 15px 0;
+    font-size: 16px;
+    width: 100px;
+    height: fit-content;
+    padding: 5px;
+}
+
+#BotonFiltrar:hover{
+    background-color: red;
+}
+
+footer{
+    display: flex;
+    margin-top: auto;
+    align-items:center;
+    justify-content: space-between;
+    height: 60px;
+    padding: 20px;
+    color: red;
+    background-color: black;
+}
+
+footer img{
+    width: 30px;
+    height: auto;
+    border-radius: 50%;
+}
+
+footer:hover{
+    transition: all 0.2s;
+    font-size: 20px;
+}
