--- a/estilos/peliculas.css
+++ b/estilos/peliculas.css
@@ -2,95 +2,99 @@
     margin: 0;
     padding: 0;
     box-sizing: border-box;
-/*    color-scheme: dark;*/
     font-family: Tahoma;    
-    
+    list-style: none;
+    text-decoration: none;
 }
 
 body{
+    display: flex;
+    flex-direction: column;
+    
     background-image: url(../imagenes/fondo.png);
+    height: 100vh;
     background-size: 100%;
     background-repeat:repeat-y;
-    /*margin-top: 0px;*/
+    
 }
 
 .cabecera{
+    display: flex;
+    align-items: center;
     width: 100%;
-    height: 80px;
-    position: fixed;
     top: 0;
-    z-index: 10;
     background-color: black;
-    align-content: center;
+    justify-content:space-between;
+    padding: 0 1%;
 }
 
 .cabecera p{
-    font-size: 48px;
+    font-size: 2.2rem;
     font-weight: bolder;
     color: red;
     text-align: center;
+    padding: 1%;
 }
 
 .MenuOpciones{
-    width: 100%;
-    height: 40px;
-    position: fixed;
-    top: 80px;
-    z-index: 10;
-    background-color: red;
-    display: grid;
-    grid-template-columns: auto;
-    
+    display: flex;
+    justify-content: space-between;
+    gap: 20px;
 }
 
-.MenuOpciones td{
-    text-align: center;
-}
-
-.peli, .dire, .gene, .anio, .pais, .acto, .cont, .indi{
-    color: black;
+.MenuOpciones a{
+    text-decoration: none;
+    font-size: 0.9rem;
     font-weight: bold;
-    text-decoration-line: none;
-    text-align: center;
+    align-items: center;
+    color: red;
+    padding: 6px 3px;
 }
 
-.IndiceAlfabetico{
-    display: grid;
-    grid-template-columns: auto;
-    margin-top: 0;
-    align-content: center;
+.MenuOpciones a:hover{
+    transition: all 0.5s;
+    height: 100px;
+    background-color: red;
+    color: black;
+    border-radius: 6px;
 }
 
-.IndiceAlfabetico div{
-    margin-top: 140px;
+main{
+    align-items: center;
+
+}
+
+.titulo{
+    font-size: 1.65rem;
+    font-weight: bold;
+    padding-top: 15px;
     text-align: center;
 }   
 
-.IndiceAlfabetico table{
-    margin-top: 50px;
-    border: red solid;
+.IndiceAlfabetico{
+    display: flex;
+    flex-direction: row;
+    text-align: center;
+    justify-content: space-between;
+    top: 0;
+    gap: 5px;
+    width: 60%;
+    margin: 20px 20% 20px 20%; 
     background-color: black;
-    border-width: 1px;
-    border-style: solid;
-    border-color:gray;
+    border: 1px solid grey;
     box-shadow: 5px 4px 20px 0 black;
     padding: 2px;
-    margin: 30px;
-}
-
-.IndiceAlfabetico caption{
-    font-size: large;
-    padding: 0 0 10px 0;
-    
-}
-
-.IndiceAlfabetico td{
-    text-align: center;
-    
 }
 
 .IndiceAlfabetico a{
-    text-decoration-line: none;
+    padding: 5px;
+    font-size: 18px;
+}
+
+.IndiceAlfabetico a:hover{
+    color: black;
+    background-color: red;
+    font-weight: bold;
 }
 
 .BotonIndice{
@@ -101,8 +105,8 @@ body{
     border: solid 2px red;
     box-shadow: 5px 4px 20px 0 black;
     position: fixed;
-    bottom: 25px;
-    right: 30px;    
+    bottom: 10vh;
+    right: 10px;    
 }
 
 .BotonIndice a{
@@ -114,13 +118,62 @@ body{
 }
 
 .NombresPeliculas{
-    width: 30%;
+    display: flex;
+    flex-direction: column;
     height: auto;
-    padding: 10px;
-    margin: 0 0 20px 30px;
-    background-color: lightgray;
+    width: 40%;
+    padding: 20px;
+    margin: 10px 30% 30px 30%;
+    background-color: rgba(255, 0, 0, 0.1);
     border: solid 2px gray;
     border-radius: 8px;
     box-shadow: 5px 4px 20px 0 black;
 }
 
+.NombresPeliculas h2{
+    margin-left: 20px 0;
+    border-bottom: 2px solid black;
+}
+
+.NombresPeliculas ul{
+    list-style: none;
+    padding: 20px;
+}
+
+.NombresPeliculas li{
+    color: black;
+    margin-left: 40px;
+    padding: 8px 0 0 0 ;
+}
+
+.NombresPeliculas a{
+    color: black;
+}
+
+.NombresPeliculas a:hover{
+    color: darkred;
+    font-weight: bold;
+    text-shadow: 2px;
+}
+
+footer{
+    display: flex;
+    margin-top: auto;
+    align-items:center;
+    justify-content: space-between;
+    height: 60px;
+    padding: 20px;
+    color: red;
+    background-color: black;
+}
+
+footer img{
+    width: 30px;
+    height: auto;
+    border-radius: 50%;
+}
+
+footer:hover{
+    transition: all 0.2s;
+    font-size: 20px;
+}
