--- a/estilos/contacto.css
+++ b/estilos/contacto.css
@@ -1,124 +1,36 @@
-*{
-    margin: 0;
-    padding: 0;
-    box-sizing: border-box;
-    font-family: Tahoma;    
-    list-style: none
-}
-
-body{
-    display: flex;
-    flex-direction: column;
-    background-image: url(../imagenes/fondo.png);
-    height: 100dvh;
-    background-size: 100%;
-    background-repeat:repeat-y;
-    align-content: center;
-}
-
-.cabecera{
-    display: flex;
-    align-items: center;
-    width: 100%;
-    top: 0;
-    background-color: black;
-    justify-content:space-between;
-    padding: 0 1%;
-}
-
-.cabecera p{
-    font-size: 2.2rem;
-    font-weight: bolder;
-    color: red;
+.encabezado{
     text-align: center;
-    padding: 1%;
 }
 
-.MenuOpciones{
-    display: flex;
-    justify-content: space-between;
-    gap: 20px;
-}
-
-.MenuOpciones a{
-    text-decoration: none;
-    font-size: 0.9rem;
-    font-weight: bold;
-    align-items: center;
-    color: red;
-    padding: 6px 3px;
-}
-
-.MenuOpciones a:hover{
-    transition: all 0.5s;
-    height: 100px;
-    background-color: red;
-    color: black;
-    border-radius: 6px;
-}
-
-    
-.contenedor {
-    display: flex;
-    width: 100%;
-    flex-direction: column;
-}
-
-.contenedor p{
-    font-size: 1.6rem;
-    font-weight: bold;
-    margin-top: 20px;
-    align-self: center;
-}
-
-.contenedor form{
-    
-    margin: 20px;
+.datosACompletar {
+    display: grid;
     width: 40%;
-    align-self: center;
+    margin: 10px auto;
+    justify-items: center;
 }
 
-input{
+.datosACompletar form{
+    text-align: center;
+}
+
+.datosACompletar input{
     font-size: 1.1rem;
-    width: 60%;
-    margin: 10px 20%;
+    width: 90%;
+    margin: 10px 0;
 }
 
 textarea{
     font-size: 1.1rem;
-    width: 60%;
-    margin: 10px 20%;
+    width: 90%;
+    margin: 10px 0;
 }
 
 .boton{
     padding: 10px 0;
-    margin: 0 20%;
     font-weight: bold;
-    
+
 }
 
 .boton:hover{
-    background-color: red;
-}
-
-footer{
-    display: flex;
-    margin-top: auto;
-    align-items:center;
-    justify-content: space-between;
-    height: 60px;
-    padding: 20px;
-    color: red;
-    background-color: black;
-}
-
-footer img{
-    width: 30px;
-    height: auto;
-    border-radius: 50%;
-}
-
-footer:hover{
-    transition: all 0.2s;
-    font-size: 20px;
+    background-color: rgb(220, 53, 69);
 }
