--- a/estilos/index.css
+++ b/estilos/index.css
@@ -2,86 +2,57 @@
     margin: 0;
     padding: 0;
     box-sizing: border-box;
-    font-family: Tahoma;    
-    list-style: none
+    font-family: system-ui, -apple-system, BlinkMacSystemFont, 'Segoe UI', Roboto, Oxygen, Ubuntu, Cantarell, 'Open Sans', 'Helvetica Neue', sans-serif;    
+    list-style: none;
+    text-decoration: none;
 }
 
 body{
     display: flex;
     flex-direction: column;
     background-image: url(../imagenes/fondo.png);
-    height: 100vh;
+    height: 100dvh;
     background-size: 100%;
     background-repeat:repeat-y;
-    
 }
 
-.cabecera{
-    display: flex;
-    align-items: center;
-    width: 100%;
-    top: 0;
-    background-color: black;
-    justify-content:space-between;
-    padding: 0 1%;
-}
-
-.cabecera p{
-    font-size: 2.2rem;
-    font-weight: bolder;
-    color: red;
-    text-align: center;
-    padding: 1%;
-}
-
-.MenuOpciones{
-    display: flex;
-    justify-content: space-between;
-    gap: 20px;
-}
-
-.MenuOpciones a{
-    text-decoration: none;
-    font-size: 0.9rem;
+.titulo{
+    font-size: 2rem;
     font-weight: bold;
-    align-items: center;
-    color: red;
-    padding: 6px 3px;
+    padding: 0;
 }
 
-.MenuOpciones a:hover{
-    transition: all 0.5s;
-    height: 100px;
-    background-color: red;
-    color: black;
-    border-radius: 6px;
+#navbarNav{
+    font-size: 1.3rem;
+    align-items: end;
 }
 
-h2{
-    margin: 4px;
-    grid-row: 1/2;
-    grid-column: 1/6;
-    padding: 10px;
-    text-align: center;
+.encabezado{
+    font-size: 2rem;
+    font-weight: lighter;
+    margin: 6px 0;
+    padding: 0;
 }
 
 .contenedor{
     display: grid;
-    height: 95%;
-    width: 95%;
-    grid-template-columns: repeat(5, 20%);
-    grid-template-rows: repeat(2, 50%);
+    grid-template-columns: 1fr 1fr 1fr 1fr 1fr;
     padding: 15px;
-    margin: 10px auto;
-    /*background-color: rgba(255, 0, 0, 0.1);
-    border: solid 2px gray;
-    border-radius: 8px;
-    box-shadow: 5px 4px 20px 0 black;*/
 }
 
-.p1{
-    grid-row: 2/3;
-    grid-column: 1/2;
+@media (max-width: 540px) {
+    .contenedor{
+        grid-template-columns: 1fr;
+    }
+}
+
+@media (max-width: 720px) {
+    .contenedor{
+        grid-template-columns: 1fr 1fr 1fr;
+    }
+}
+
+.tarjeta{
     background-color: rgba(255, 0, 0, 0.1);
     font-size: 0.9rem;
     margin: 10px;
@@ -89,122 +60,36 @@ h2{
     border-radius: 10px;
     box-shadow: 5px 4px 20px 0 black;;
     padding: 10px;
+    display: grid;
+    grid-template-rows: 25% 75%;
+    justify-items: center;
     
 }
 
-.p1 img{
+.tarjeta img{
+    display: block;
+    width: 80%;
+}
+
+.tarjeta p{
     display: block;
     width: 90%;
-    margin: 0 5%;
+    margin: 20px 5% 5% 5%;
 }
-
-.p1 p{
-    display: block;
-    width: 90%;
-    margin: 20px 5%;
-
-}
-
-.p2{
-    grid-row: 2/3;
-    grid-column: 2/3;
-    background-color: rgba(255, 0, 0, 0.1);
-    font-size: 0.9rem;
-    margin: 10px;
-    border: 1px solid black;
-    border-radius: 10px;
-    box-shadow: 5px 4px 20px 0 black;;
-    padding: 10px;}
-
-.p2 img{
-    display: block;
-    width: 90%;
-    margin: 0 5%;
-}
-    
-.p3{
-    grid-row: 2/3;
-    grid-column: 3/4;
-    background-color: rgba(255, 0, 0, 0.1);
-    font-size: 0.9rem;
-    margin: 10px;
-    border: 1px solid black;
-    border-radius: 10px;
-    box-shadow: 5px 4px 20px 0 black;;
-    padding: 10px;}
-
-.p3 img{
-    display: block;
-    width: 90%;
-    margin: 0 5%;
-}
-    
-.p4{
-    grid-row: 2/3;
-    grid-column: 4/5;
-    background-color: rgba(255, 0, 0, 0.1);
-    font-size: 0.9rem;
-    margin: 10px;
-    border: 1px solid black;
-    border-radius: 10px;
-    box-shadow: 5px 4px 20px 0 black;;
-    padding: 10px;
-}
-
-.p4 img{
-    display: block;
-    width: 90%;
-    margin: 0 5%;
-}
-
-.p5{
-    grid-row: 2/3;
-    grid-column: 5/6;
-    background-color: rgba(255, 0, 0, 0.1);
-    font-size: 0.9rem;
-    margin: 10px;
-    border: 1px solid black;
-    border-radius: 10px;
-    box-shadow: 5px 4px 20px 0 black;;
-    padding: 10px;
-}
-
-.p5 img{
-    display: block;
-    width: 90%;
-    margin: 0 5%;
-}
-
-/*.p4:hover{
-    color: yellow;
-    line-height: 2rem;
-    background-color: black;
-    border-bottom: 5px solid yellowgreen;
-    border-right: 5px solid yellowgreen;
-    border-top: 5px solid yellow;
-    border-left: 5px solid yellow;
-    transform: rotate(0.5turn);
-    transition: all 0.5s;
-}*/
 
 footer{
     display: flex;
     margin-top: auto;
     align-items:center;
     justify-content: space-between;
-    height: 60px;
-    padding: 20px;
-    color: red;
-    background-color: black;
+    height: 7%;
+    padding: 1%;
+    color: black;
+    background-color: rgb(220, 53, 69);
 }
 
 footer img{
-    width: 30px;
-    height: auto;
+    width: 3cap;
+    height: 80%;
     border-radius: 50%;
-}
-
-footer:hover{
-    transition: all 0.2s;
-    font-size: 20px;
 }
