--- a/estilos/paises.css
+++ b/estilos/paises.css
@@ -1,122 +1,56 @@
-*{
-    margin: 0;
-    padding: 0;
-    box-sizing: border-box;
-    font-family: Tahoma;    
-    list-style: none;
-    text-decoration-line: none;
-}
-
-body{
+main{
     display: flex;
     flex-direction: column;
-    background-image: url(../imagenes/fondo.png);
-    height: 100dvh;
-    background-size: 100%;
-    background-repeat:repeat-y;
-    
-}
-
-.cabecera{
-    display: flex;
     align-items: center;
-    width: 100%;
-    top: 0;
-    background-color: black;
-    justify-content:space-between;
-    padding: 0 1%;
 }
 
-.cabecera p{
-    font-size: 2.2rem;
-    font-weight: bolder;
-    color: red;
-    text-align: center;
-    padding: 1%;
-}
-
-.MenuOpciones{
-    display: flex;
-    justify-content: space-between;
-    gap: 20px;
-}
-
-.MenuOpciones a{
-    text-decoration: none;
-    font-size: 0.9rem;
-    font-weight: bold;
-    align-items: center;
-    color: red;
-    padding: 6px 3px;
-}
-
-.MenuOpciones a:hover{
-    transition: all 0.5s;
-    height: 100px;
-    background-color: red;
-    color: black;
-    border-radius: 6px;
-}
-
-main{
-    align-items: center;
-
-}
-
-.titulo{
-    font-size: 1.65rem;
-    font-weight: bold;
-    padding-top: 15px;
-    text-align: center;
-}
-
-.IndiceAlfabetico{
+.indiceAlfabetico{
     display: flex;
     flex-direction: row;
     text-align: center;
     justify-content: space-between;
     top: 0;
     gap: 5px;
-    width: 60%;
-    margin: 20px 20% 20px 20%; 
+    width: 100%;
+    margin: 10px 0 20px 0;
     background-color: black;
     border: 1px solid grey;
     box-shadow: 5px 4px 20px 0 black;
     padding: 2px;
 }
 
-.IndiceAlfabetico a{
+.indiceAlfabetico a{
     padding: 5px;
     font-size: 18px;
 }
 
-.IndiceAlfabetico a:hover{
+.indiceAlfabetico a:hover{
     color: black;
-    background-color: red;
+    background-color: rgb(220, 53, 69);
     font-weight: bold;
 }
 
-.BotonIndice{
+.botonIndice{
     width: auto;
     height: auto;
     padding: 6px;
     background-color: black;
-    border: solid 2px red;
+    border: solid 2px rgb(220, 53, 69);
     box-shadow: 5px 4px 20px 0 black;
     position: fixed;
     bottom: 10vh;
     right: 10px;    
 }
 
-.BotonIndice a{
-    color: red;
+.botonIndice a{
+    color: rgb(220, 53, 69);
     text-decoration-line: none;
     text-align: right;
     font-size: small;
     font-weight: bold;
 }
 
-.NombresPaises{
+.nombresPaises{
     display: flex;
     flex-direction: column;
     height: auto;
@@ -129,7 +63,7 @@ main{
     box-shadow: 5px 4px 20px 0 black;
 }
 
-.NombresPaises h2{
+.nombresPaises h2{
     margin-left: 20px 0;
     border-bottom: 2px solid black;
 }
@@ -140,23 +74,23 @@ main{
     align-items: center;
 }
 
-.NombresPaises ul{
+.nombresPaises ul{
     list-style: none;
     padding: 20px;
 }
 
-.NombresPaises li{
+.nombresPaises li{
     margin-left: 40px;
     padding: 8px 0 0 0 ;
 }
 
-.NombresPaises li:hover{
+.nombresPaises li:hover{
     color: darkred;
     font-weight: bold;
     text-shadow: 2px;
 }
 
-#BotonFiltrar{
+#botonFiltrar{
     margin: 15px 0px 15px 0;
     font-size: 16px;
     width: 100px;
@@ -164,28 +98,6 @@ main{
     padding: 5px;
 }
 
-#BotonFiltrar:hover{
-    background-color: red;
-}
-
-footer{
-    display: flex;
-    margin-top: auto;
-    align-items:center;
-    justify-content: space-between;
-    height: 60px;
-    padding: 20px;
-    color: red;
-    background-color: black;
-}
-
-footer img{
-    width: 30px;
-    height: auto;
-    border-radius: 50%;
-}
-
-footer:hover{
-    transition: all 0.2s;
-    font-size: 20px;
+#botonFiltrar:hover{
+    background-color: rgb(220, 53, 69);
 }
