--- a/estilos/peliculas.css
+++ b/estilos/peliculas.css
@@ -22,6 +22,7 @@ main{
 .indiceAlfabetico a{
     padding: 5px;
     font-size: 18px;
+    text-decoration: none;
 }
 
 .indiceAlfabetico a:hover{
@@ -81,6 +82,7 @@ main{
 
 .nombresPeliculas a{
     color: black;
+    text-decoration: none;
 }
 
 .nombresPeliculas a:hover{
