--- a/estilos/actores.css
+++ b/estilos/actores.css
@@ -115,7 +115,14 @@ main{
         padding: 0 5px;
         font-size: 0.8rem;
     }
+    .film{
+        width: 73vw;
+        height: 50vh;
+        margin: 5px;
+        padding: 0 5px;
+        font-size: 0.8rem;
+    }
     .encabezado{
-        font-size: 1.8rem;
+        font-size: 1.4rem;
     }        
 }
