--- a/estilos/directores.css
+++ b/estilos/directores.css
@@ -35,30 +35,23 @@ main{
 
 .respuesta{
     display: flex;
-    flex-direction: row;
     margin-top: 40px;
-    padding: 15px 0;
+    padding: 15px;
     border: 2px black solid;
     box-shadow: 5px 10px 10px 4px grey;
     background-color: rgba(255, 0, 0, 0.1)
 }
 
-.foto{
-    width: 15vw;
-    height: 350px;
-    margin: 10px;
-}
 
 .foto{
-    width: 15vw;
-    height: 50vh;
+    width: auto;
+    height: 60vh;
     margin: 10px;
 }
 
 .foto img{
-    margin: 2px 2px;
-    display: flexbox ;
-    width: 100%;
+    margin: 0;
+    height: 100%;
 }
 
 .bio{
@@ -106,4 +99,26 @@ main{
     color: darkred;
     font-weight: bold;
     text-shadow: 2px;
+}
+@media (max-width: 760px) {
+    .respuesta{
+        flex-direction: column;
+    }
+    .bio{
+        width: 73vw;
+        height: 50vh;
+        margin: 5px;
+        padding: 0 5px;
+        font-size: 0.8rem;
+    }
+    .film{
+        width: 73vw;
+        height: 50vh;
+        margin: 5px;
+        padding: 0 5px;
+        font-size: 0.8rem;
+    }
+    .encabezado{
+        font-size: 1.4rem;
+    }        
 }
