--- a/estilos/generos.css
+++ b/estilos/generos.css
@@ -40,12 +40,13 @@ main{
     border: 2px black solid;
     box-shadow: 5px 10px 10px 4px grey;
     background-color: rgba(255, 0, 0, 0.1);
-    font-style: italic;
-    font-size: 20px;
-    font-weight: lighter;
     color: blue;
     text-align: justify;
     padding: 20px;
+}
+
+h3:hover{
+    font-size: 150px;
 }
 
 .Respuesta:hover{
